fix st3 boss stop bug

--- a/stripper/ze_grau_a03_4f.cfg
+++ b/stripper/ze_grau_a03_4f.cfg
@@ -319,3 +319,21 @@ add:
 		"OnTrigger" "playerSetHealth210-1"
     }    
 }
+
+modify:
+{
+ match:
+	{
+	"targetname" "st3_boss_return_relay"
+	"classname" "logic_relay"
+	"hammerid" "283019"
+	}
+	delete:
+	{
+	"OnTrigger" "st3_boss_return_relay2Trigger0-1"
+	}
+	insert:
+	{
+	"OnTrigger" "st3_boss_return_relay2Trigger0.10-1"
+	}
+}
