fix st3 bosss stop bug

--- a/stripper/ze_grau_a03_4f.cfg
+++ b/stripper/ze_grau_a03_4f.cfg
@@ -330,10 +330,14 @@ modify:
 	}
 	delete:
 	{
+	"OnTrigger" "st3_boss_a_casePickRandomShuffle0-1"
+	"OnTrigger" "st3_boss_killTrigger0-1"
 	"OnTrigger" "st3_boss_return_relay2Trigger0-1"
 	}
 	insert:
 	{
+	"OnTrigger" "st3_boss_a_casePickRandomShuffle0.10-1"
+	"OnTrigger" "st3_boss_killTrigger0.10-1"
 	"OnTrigger" "st3_boss_return_relay2Trigger0.10-1"
 	}
 }
