fix rtv boss skill

--- a/stripper/ze_grau_a03_4f.cfg
+++ b/stripper/ze_grau_a03_4f.cfg
@@ -201,6 +201,19 @@ modify:
 	}
 }
 
+modify:
+{
+ match:
+	{
+	"targetname" "st3_boss_a_case2"
+	"classname" "logic_case"
+	}
+	insert:
+	{
+	"OnCase07" "st3_boss_az_disableTrigger0-1"
+	}
+}
+
 add:
 {
 	"origin" "-272 96 -352"
@@ -299,9 +312,23 @@ add:
 		"OnTrigger" "st3_boss_return_relay2Enable19-1"
 		"OnTrigger" "add_bgm_casePickRandom19-1"
 		"OnTrigger" "rtv_bgmKill0-1"
-		"OnTrigger" "st3_boss_az_zm_teleport_1Kill0-1"
-		"OnTrigger" "playerAddOutPuthealth 30010-1"
+		"OnTrigger" "playerAddOutPuthealth 20010-1"
 		"OnTrigger" "Lv_saveAddOutputOnUser1 Lv_control:SetValue:3:0.00:119-1"
+		"OnTrigger" "st3_boss_az_startDisable0-1"
+		"OnTrigger" "st3_boss_az_disableEnable0-1"
+    }    
+}
+
+add:
+{
+    "origin" "-272 96 -352"
+	"spawnflags" "0"
+	"StartDisabled" "1"
+	"targetname" "st3_boss_az_disable"
+	"classname" "logic_relay"
+    connections
+    {
+		"OnTrigger" "st3_boss_return_relayTrigger0.1-1"
     }    
 }
 
